mdapi_output_dir/objects/Motherboard__c.object
<CustomObject>
    <label>Motherboard</label>
    <nameField>
        <label>Motherboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motherboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formfactor__c</fullName>
        <label>Formfactor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2__c</fullName>
        <label>M2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Memory_Frequency__c</fullName>
        <label>Maximum Memory Frequency</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Socket__c</fullName>
        <label>Socket</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>